	* src/gcompris/gcompris.c: added support for different user defined screen size
	* src/gcompris/properties.c: added screensize and timer definition
	* src/gcompris/config.c: added screensize and timer definition
	* src/boards/shapegame.c: added support for infinite puzzle pieces
	* boards/scale/*.xml.in: fixed boards with 2 possible solution
	thanks to Thomas Gebhart for profidind the fix.

2002-04-28 Bruno Coudoin <bruno.coudoin@free.fr>

	* confidure.in: Changed to release 1.0.3
	* src/board/*.c: fixed compilation warnings where prototyte f() must be f(void)
	* src/gcompris/timer.[ch]: creation of the timer api for gcompris
	* boards/*.xml.in: added the name property and change name entity to title
	* src/boards/algebra.c: implemented the use of the new timer api
	* src/boards/clockgame.c: changed the cursor to ease the selection
	
2002-04-28 Thomas Gebhardt <gebhardt@HRZ.Uni-Marburg.DE>

	* boards/scales/board3_0.xml.in: changed because there was 2 solutions

2002-04-04 Imre Ehreth

	* src/boards/shapegame.c: fixed random misplacement (long standing bug ;)

2002-03-29 Christophe Merlet <redfox@eikonex.org>

	* gcompris.spec.in: Added %defattr to sound-* packages
	Added directory to file listing.

2002-03-28 Bruno Coudoin <bruno.coudoin@free.fr>

	* src/board/maze.c: Changed to use a tux and a door
	* boards/doubleentry/board2_0.xml.in: create a new level for doubleentry
	* configure.in: release of 1.0.2
	
2002-03-27 Bruno Coudoin <bruno.coudoin@free.fr>

	* autogen.sh: changed to use gnome-autogen

2002-03-26 Pascal Georges <pascal.georges1@free.fr>

	* src/gcompris/soundutil.c : detection added for the presence of ogg123 in path

2002-03-24 Bruno Coudoin <bruno.coudoin@free.fr>

	* src/board/target.c: Created the target boards
	* board/doubleentry.xml.in: Created the double entry board

2002-03-22 Pascal Georges <pascal.georges1@free.fr>

	* po/fr.po : fixed some orthographic errors

2002-03-21 Bruno Coudoin <bruno.coudoin@free.fr>
