@@ -32,6 +32,8 @@
   <Image filename="mrpatate/nez1.png"/>
   <Image filename="gcompris/misc/egg.png"/>
   <Image filename="gcompris/misc/peer.png"/>
+  <Image filename="mrpatate/noeye.png"/>
+  <Image filename="mrpatate/eyeball.png"/>
   <Image filename="mrpatate/oeuil1.png"/>
   <Image filename="mrpatate/oeuil2.png"/>
   <Image filename="mrpatate/oeuil3.png"/>
@@ -39,4 +41,8 @@
   <Image filename="gcompris/misc/raquette.png"/>
   <Image filename="gcompris/misc/flower.png"/>
   <Image filename="imageid/cartable.png"/>
+  <Image filename="mrpatate/watch.png"/>
+  <Image filename="mrpatate/ear_jewell.png"/>
+  <Image filename="mrpatate/hat.png"/>
+  <Image filename="mrpatate/sherif.png"/>
 </GCompris>
